@@ -59,34 +59,34 @@ S3method("findAssocs", "matrix")
 S3method("dissimilarity", "PlainTextDocument")
 
 S3method("[", "DocumentTermMatrix")
-S3method("colnames", "DocumentTermMatrix")
 S3method("Dictionary", "DocumentTermMatrix")
-S3method("dim", "DocumentTermMatrix")
-S3method("dimnames", "DocumentTermMatrix")
 S3method("dissimilarity", "DocumentTermMatrix")
 S3method("findAssocs", "DocumentTermMatrix")
 S3method("inspect", "DocumentTermMatrix")
-S3method("ncol", "DocumentTermMatrix")
-S3method("nrow", "DocumentTermMatrix")
 S3method("plot", "DocumentTermMatrix")
 S3method("print", "DocumentTermMatrix")
 S3method("t", "DocumentTermMatrix")
-S3method("rownames", "DocumentTermMatrix")
 
 S3method("[", "TermDocumentMatrix")
-S3method("colnames", "TermDocumentMatrix")
 S3method("Dictionary", "TermDocumentMatrix")
-S3method("dim", "TermDocumentMatrix")
-S3method("dimnames", "TermDocumentMatrix")
 S3method("dissimilarity", "TermDocumentMatrix")
 S3method("findAssocs", "TermDocumentMatrix")
 S3method("inspect", "TermDocumentMatrix")
-S3method("ncol", "TermDocumentMatrix")
-S3method("nrow", "TermDocumentMatrix")
 S3method("plot", "TermDocumentMatrix")
 S3method("print", "TermDocumentMatrix")
 S3method("t", "TermDocumentMatrix")
-S3method("rownames", "TermDocumentMatrix")
+
+S3method("as.matrix", "simple_triplet_matrix")
+S3method("as.simple_triplet_matrix", "matrix")
+S3method("as.simple_triplet_matrix", "simple_triplet_matrix")
+S3method("Ops", "simple_triplet_matrix")
+S3method("c", "simple_triplet_matrix")
+S3method("cbind", "simple_triplet_matrix")
+S3method("dim", "simple_triplet_matrix")
+S3method("dimnames", "simple_triplet_matrix")
+S3method("duplicated", "simple_triplet_matrix")
+S3method("rbind", "simple_triplet_matrix")
+S3method("unique", "simple_triplet_matrix")
 
 exportMethods(
               # Constructors
